[gd_scene load_steps=6 format=3 uid="uid://bp3wyqj2iq7mg"]

[ext_resource type="Script" path="res://levelgen/room/objects/level_transition.gd" id="1_yfjom"]
[ext_resource type="Texture2D" uid="uid://bma1ouoy4ubsj" path="res://assets/tilesetx2.png" id="2_bhtyv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lfcgf"]
atlas = ExtResource("2_bhtyv")
region = Rect2(448, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtvm1"]
atlas = ExtResource("2_bhtyv")
region = Rect2(480, 544, 32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_kqh2c"]
radius = 32.0

[node name="LevelTransition" type="Node2D"]
script = ExtResource("1_yfjom")

[node name="OpenSprite" type="Sprite2D" parent="."]
visible = false
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_lfcgf")

[node name="ClosedSprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_rtvm1")

[node name="PlayerDetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
shape = SubResource("CircleShape2D_kqh2c")

[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_player_detection_zone_body_entered"]
